--- a/Index.html
+++ b/Index.html
@@ -35,8 +35,10 @@
         <p>
             <h3>Опыт работы:</h3>
             <ol>
-                <li>Инженер по эксплуатации зданий
-                    <b>11.2009–06.2015</b>
+                <li>
+                    <div>Инженер по эксплуатации зданий
+                        <b>11.2009–06.2015</b>
+                    </div>
                     <p>ООО «Вектор»
                         <a href="http://www.vektor.com">(www.vektor.com)</a> , г. Санкт-Петербург
                     </p>
